found a bug in the Searches y eliminate redundant code #24